@@ -28,25 +28,15 @@
 #ifdef __WEAK_CRYPTO__
 	#define CRYPTOPP_ENABLE_NAMESPACE_WEAK 1
 #endif
-#ifdef __CRYPTO_DEBIAN_GENTOO__
-	#include <crypto++/config.h>
-	#include <crypto++/md4.h>
-	#include <crypto++/rsa.h>
-	#include <crypto++/base64.h>
-	#include <crypto++/osrng.h>
-	#include <crypto++/files.h>
-	#include <crypto++/sha.h>
-	#include <crypto++/des.h>
-#else 
-	#include <cryptopp/config.h>
-	#include <cryptopp/md4.h>
-	#include <cryptopp/rsa.h>
-	#include <cryptopp/base64.h>
-	#include <cryptopp/osrng.h>
-	#include <cryptopp/files.h>
-	#include <cryptopp/sha.h>
-	#include <cryptopp/des.h>
-#endif
+
+#include <@CRYPTO_PP_INCLUDE_PREFIX@/config.h>
+#include <@CRYPTO_PP_INCLUDE_PREFIX@/md4.h>
+#include <@CRYPTO_PP_INCLUDE_PREFIX@/rsa.h>
+#include <@CRYPTO_PP_INCLUDE_PREFIX@/base64.h>
+#include <@CRYPTO_PP_INCLUDE_PREFIX@/osrng.h>
+#include <@CRYPTO_PP_INCLUDE_PREFIX@/files.h>
+#include <@CRYPTO_PP_INCLUDE_PREFIX@/sha.h>
+#include <@CRYPTO_PP_INCLUDE_PREFIX@/des.h>
 
 #endif /* CRYPTOPP_INC_H */
 // File_checked_for_headers
